Removed forward slash from img tag

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
 
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <title>Sunnyside</title>
 
@@ -19,7 +19,7 @@
   <body>
     <header>
       <div class="container">
-        <img src="/images/logo.svg" alt="logo" class="logo">
+        <img src="images/logo.svg" alt="logo" class="logo">
 
         <nav>
 
@@ -31,12 +31,12 @@
           </ul>
 
         </nav>
-        <img src="/images/desktop/image-header.jpg" alt="header" class="header-img">
+        <img src="images/desktop/image-header.jpg" alt="header" class="header-img">
       </div>
 
     </header>
 
-    <img src="/images/desktop/image-transform.jpg" alt="egg" class="egg">
+    <img src="images/desktop/image-transform.jpg" alt="egg" class="egg">
 
 
 
