Added updated image links

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <header>
       <div class="container">
-        <img src="images/logo.svg" alt="logo" class="logo">
+        <img src="../images/logo.svg" alt="logo" class="logo">
 
         <nav>
 
@@ -31,12 +31,12 @@
           </ul>
 
         </nav>
-        <img src="images/desktop/image-header.jpg" alt="header" class="header-img">
+        <img src="../images/desktop/image-header.jpg" alt="header" class="header-img">
       </div>
 
     </header>
 
-    <img src="images/desktop/image-transform.jpg" alt="egg" class="egg">
+    <img src="../images/desktop/image-transform.jpg" alt="egg" class="egg">
 
 
 
