--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
    
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
     <link rel="stylesheet" href="css/style.css">
 
@@ -20,7 +20,7 @@
   <body>
     <header>
       <div class="container">
-        <img src="../images/logo.svg" alt="logo" class="logo">
+        <img src="./images/logo.svg" alt="logo" class="logo">
 
         <nav>
 
